# jembeui

./: .gitignore  .pylintrc  MANIFEST.in  README.md  TODO  package-lock.json  package.json  postcss.config.js  pyproject.toml  setup.cfg  tailwind.config.js
jembeui/: __init__.py  exceptions.py  helpers.py  page.py  settings.py
jembeui/cli/: jembeui.py  utils.py
jembeui/cli/project_templates/basic/: .gitignore.jpt  .pylintrc.jpt  README.md  jembeui.config.js.jpt  package.json  postcss.config.js  setup.cfg.jpt  tailwind.config.js
jembeui/cli/project_templates/with_auth/: .flaskenv.jpt  .gitignore.jpt  .pylintrc.jpt  (+9 more)
jembeui/components/: __init__.py  _jui_utils.py  component.py  component_with_menu.py  list_records.py  menu.py
jembeui/components/crud/: __init__.py  create.py  delete.py  edit.py  form.py  update.py  view.py
jembeui/components/fields/: __init__.py  lov_field.py
jembeui/components/form/: __init__.py  create_record.py  create_record_adaptable.py  form.py  form_adaptable.py  form_base.py  trail_form.py  update_record.py  update_record_adaptable.py  view_record.py  view_record_adaptable.py
jembeui/components/form_fields/: __init__.py  select_multiple_search.py
jembeui/components/list/: __init__.py  list.py  list_records.py
jembeui/components/page/: __init__.py  action_confirmation.py  alerts.py  breadcrumb.py  confirmation.py  head_tag.py  message.py  notice.py  notifications.py  page.py  syserror.py  system_error.py  title.py  update_indicatior.py
jembeui/includes/: field.py  file_field.py  form.py  link.py  lov_field.py  menu.py  tiptap_field.py
jembeui/lib/: __init__.py  breadcrumb.py  form.py  form_fields.py  link.py  menu.py
jembeui/lib/form/: __init__.py  _file_handling.py  form.py
jembeui/lib/form_fields/: __init__.py  file.py  image.py  jui_field.py  select_multiple.py
jembeui/sqlalchemy/: file.py
jembeui/src/css/: main.css  tailwind.config.js
jembeui/src/js/: jembeui.js  lov.js  nprogress.js  tiptap.js
jembeui/static/css/: main.css  main0.0.11.css  main0.0.12.css  main0.0.13.css  main0.0.14.css  main0.0.15.css  main0.0.16.css  main0.0.17.css
jembeui/static/js/: jembeui.js  jembeui.js.map  jembeui0.0.12.js  jembeui0.0.12.js.map  jembeui0.0.13.js  jembeui0.0.13.js.map  jembeui0.0.14.js.map  jembeui0.0.15.js  jembeui0.0.16.js.map  jembeui0.0.17.js
jembeui/templates/jembeui/: jembeui.html
jembeui/translations/: messages.pot
(+246 files in other folders)
