[metadata]
name = jembeui
version = 0.0.1
description = JembeUI Web Components
license = Proprietary
license_files = LICENSE
author = Predrag Peranovic
author_email = predrag.peranovic@jembe.io
long_description = file: README.md
url= https://jembe.io
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks
keywords = ["framework"]
project_urls=
    Repository = https://github.com/Jembe/jembeui

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires = 
    jembe >= 0.3.1
    Flask-SeaSurf
    Flask-Session
    Flask-SQLAlchemy
    Flask-Migrate
    Flask-Babel
    WTForms

[options.packages.find]
exclude = tests

[options.extras_require]
dev = 
    black
    mypy
    pytest
    coverage [toml]
    watchdog [watchmedo]

[options.entry_points]
console_scripts = 
    jui = jembeui.cli.jembeui:jui